--- a/MyatYateVersion.ini
+++ b/MyatYateVersion.ini
@@ -1,3 +1,3 @@
-【version】1.0【version】
-【notes】Please Update Apk【notes】
+【version】2.0【version】
+【notes】Sever Maintaining Please wait【notes】
 【links】【links】
