--- a/Headshotversion.ini
+++ b/Headshotversion.ini
@@ -1,4 +1,4 @@
 
-【version】1.0【version】
-【notes】Sever Maintaining Please wait【notes】
+【version】2.0【version】
+【notes】Update LTNS Headshot V2【notes】
 【links】【links】
