--- a/Headshotversion.ini
+++ b/Headshotversion.ini
@@ -1,4 +1,5 @@
 
 【version】2.0【version】
-【notes】Update LTNS Headshot V2【notes】
+【notes】Update LTNS Headshot V2
+IN V2, We Improved following  (1)IpadView (2)Reduce Recoil (3)Fix some Ban (4)High Damge (5) Auto Headshot Improve【notes】
 【links】【links】
