--- a/Version.ini
+++ b/Version.ini
@@ -1,3 +1,3 @@
-【version】5.2【version】
-【notes】Please Update Apk【notes】
+【version】5.3【version】
+【notes】Please Update Apk Fix Hs Mod data And Remove Hs from Script【notes】
 【links】【links】
