--- a/Version.ini
+++ b/Version.ini
@@ -1,3 +1,3 @@
-【version】5.4【version】
-【notes】Please Update Apk Fix Hs Mod data And Remove Hs from Script【notes】
+【version】5.5【version】
+【notes】Please Update For S16【notes】
 【links】【links】
