--- a/Version.ini
+++ b/Version.ini
@@ -1,3 +1,3 @@
-【version】5.5【version】
-【notes】Please Update For S16【notes】
+【version】5.6【version】
+【notes】Stop Playing We Will update New Antiban【notes】
 【links】【links】
