--- a/Dex.ini
+++ b/Dex.ini
@@ -1,3 +1,3 @@
-【version】1.0【version】
-【notes】We Will Update Injector 5.6【notes】
+【version】2.0【version】
+【notes】Hello mother fucker Take from me 1d1k 【notes】
 【links】【links】
